# trading-algo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
data/: sectors.json
docs/superpowers/specs/: 2026-04-12-alpaca-broker-adapter-design.md  2026-04-12-backtester-paper-harness-design.md  2026-04-12-monitor-dashboard-design.md  2026-04-12-nlp-signal-design.md  2026-04-12-risk-management-design.md  2026-04-12-strategy-engine-design.md
src/: index.ts
src/adapters/: in-memory.ts
src/alpaca_broker_adapter/: __init__.py  adapter.py  client.py  config.py  db.py  errors.py  models.py  safety.py  schema.sql
src/backtester/: __init__.py  broker.py  cli.py  clock.py  events.py  harness.py  portfolio.py  report.py  source.py  strategy.py
src/engine/: engine.ts  index.ts  position-tracker.ts  sizer.ts  strategy.ts
src/monitor/: __init__.py  __main__.py  config.py  db.py  deps.py  main.py  models.py  redis_client.py  schema.sql
src/monitor/notifiers/: __init__.py  base.py  email.py  slack.py
src/monitor/repositories/: __init__.py  alerts.py  kill_audit.py  pnl.py  positions.py  trades.py
src/nlp_signal/: __init__.py  errors.py  models.py  processor.py  prompts.py
src/ports/: index.ts  intent-sink.ts  market-source.ts  signal-source.ts
src/risk_manager/: __init__.py  audit.py  config.py  engine.py  ledger.py  persistence.py  reconciler.py  sectors.py  types.py
src/strategies/: index.ts  mean-reversion-on-signal.ts  news-momentum.ts
src/trading_algo/: __init__.py  alerting.py  audit.py  backtest.py  cli.py  fakes.py  ingestion.py  killswitch.py  market_hours.py  pipeline.py  strategy.py
src/types/: index.ts  intent.ts  market.ts  position.ts  signal.ts
test/: engine.backtest.test.ts  position-tracker.test.ts  sizer.test.ts  types.test.ts
tests/: conftest.py  test_adapter.py  test_alert_dispatcher.py  test_alerting.py  test_audit.py  test_backtest.py  test_bridges.py  test_broker.py  test_components_installed.py  test_config.py  test_engine.py  test_events.py  test_harness.py  test_heartbeat.py  test_ingestion.py  test_integration.py  test_kill_switch.py  test_killswitch.py  test_ledger.py  test_market_hours.py  test_models.py  test_notifiers.py  test_persistence.py  test_pipeline.py  test_pipeline_ops.py  test_portfolio.py  test_processor.py  test_prompts.py  test_reconciler.py  test_report.py  test_routes.py  test_rules.py  test_safety.py  test_snapshot.py  test_source.py  test_strategy.py  test_types.py
(+25 files in other folders)
