[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-algo"
version = "0.1.0"
description = "Integrated trading-algo system: glues NLP signals, strategy, risk, and broker adapter into a single pipeline."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pandas_market_calendars>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
trading-algo = "trading_algo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
